add dao as home back, mostly working, need to separate sites, convert, unify

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,6 +4,8 @@ template(name='nav')
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
+            a.icon.item.home2(href='/')
+                i.big.yin.yang.icon
             a.icon.item.home2(href='/reddit')
                 i.big.reddit.icon
             a.icon.item.home2(href='/stack' data-tab='groups')
