--- a/client/subreddits.jade
+++ b/client/subreddits.jade
@@ -8,7 +8,7 @@ template(name='subreddits')
                 .ui.icon.input
                     i.search.icon
                     input.search_site_name(type='text')
-                +cloud filter='stack_site'
+                +cloud filter='subreddit'
                 .spacer
             .sixteen.wide.center.aligned.column
                 .ui.five.column.stackable.grid
