--- a/client/dao.jade
+++ b/client/dao.jade
@@ -1,4 +1,4 @@
-template(name='reddit')
+template(name='dao')
     .ui.stackable.grid
         .row
             .sixteen.wide.column.smallscroll
@@ -313,3 +313,137 @@ template(name='reddit')
                                 +reddit_doc
                 
                     
+                
+                
+                
+            
+                
+template(name='view_mode')
+    a.ui.compact.icon.large.tertiary.button.toggle_view(class=toggle_view_button_class)
+        // i.link.zoomer.icon(class="#{toggle_view_class} #{thinking_class}" title=k)
+        // +i n=toggle_view_class
+        +i n=i cl='ui mini image'
+        // |#{k}
+
+template(name='emotion_mode')
+    .ui.compact.icon.big.circular.basic.tertiary.button.toggle_emotion
+        +i n=i cl='ui mini image'
+        // i.link.zoomer.icon(class="#{toggle_emotion_class} #{thinking_class}" title=t)
+        // |#{k}
+    // if selected_emotion
+    //     i.huge.pointer.zoomer.icon.toggle_emotion(class="#{i2} #{color}" title=t)
+    //     // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/color/50/000000/#{icon}.png" class=cl title=t)
+    // else
+    //     i.big.grey.pointer.zoomer.icon.toggle_emotion(class="#{i2}" title=t)
+    //     // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/ios/36/000000/#{icon}.png" class=cl title=t)
+
+
+template(name='pull_reddit')
+    .ui.icon.button.pull
+        i.reddit.icon
+        
+template(name='call_watson')
+    .ui.icon.button.pull
+        i.dna.icon
+
+template(name='convert')
+    .ui.icon.button.convert
+        i.exchange.icon
+
+
+template(name='unselect_tag')
+    a.unselect_tag.ui.black.compact.circular.large.button.select_term(href='#')
+        if term
+            img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
+        strong #{this}
+
+template(name='tag_selector')
+    // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.zoomer.tertiary.large.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            if term.watson.metadata.image
+                img.ui.mini.rounded.inline.invert.image.zoomer(src=term.watson.metadata.image)    
+        | #{name}
+        // small #{count}
+        
+template(name='select_subreddit')
+    // a.ui.basic.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.basic.label.pointer.zoomer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            if term.watson.metadata.image
+                img.ui.avatar.compact.invert.image(src=term.watson.metadata.image)    
+        | #{name}
+        small #{count}
+
+template(name='doc_tag')
+    a.ui.image.large.basic.label.pointer.zoomer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            img.ui.avatar.compact.image(src=term.watson.metadata.image)    
+        | #{this}
+        small #{count}
+
+
+template(name='duck')
+    with content
+        // .ui.segment
+        .ui.inline.header #{Heading}
+        // .item abstract #{Abstract}
+        .item.abstract !{AbstractText}
+        a.ui.icon.button(href=AbstractURL)
+            // #{AbstractURL}
+            i.large.external.icon
+        img(src=Image)
+        each RelatedTopics
+            if Text
+                // .ui.compact.button.topic
+                .ui.pointer.small.header.topic(class=thinking_class)
+                    img.ui.mini.inline.rounded.image(src=Icon.URL)
+                    |#{Text}
+                    // | {{lowered Text}}
+            // .content
+            //     .item #{FirstURL}
+            //     .item !{Result}
+
+
+
+    
+    
+template(name='tone')
+    // h3 tone
+    .ui.horizontal.list
+        each tone.result.document_tone.tones
+            .item #{tone_id} {{ to_percent score }}%
+    .ui.list.l11
+        each tone.result.sentences_tone
+            .item(class=sentence_class)
+                //- span #{sentence_id}
+                span.tone_item.ui.zoomer.pointer.text(title="#{sentence_id}" class="#{tone_size} #{sentence_color}") 
+                    |{{lowered text}}
+                    span.content
+                        // .inline.header(title="#{sentence_id}") {{lowered text}}
+                        |#{weight}
+                        i.chevron.up.link.grey.large.icon.upvote_sentence
+                        i.chevron.down.link.grey.large.icon.downvote_sentence
+                        each tones
+                            .ui.inverted.invert.small.compact.label(class="#{tone_label_class}") 
+                            .ui.small.compact.inverted.label(class="{{calculated_size 'weight'}} #{tone_label_class}") 
+                                span.ui.text
+                                    |#{tone_id} &nbsp;
+                                | {{ to_percent score }}% 
+                        .ui.mini.transparent.icon.input
+                            input.tag_sentence(type='text' placeholder='tag')
+                        each tags 
+                            .ui.label #{this}
+    // unless tone                
+    //- #call_tone.ui.icon.button
+    //-     i.refresh.icon
+            // +jsonView(json=tone)
+
+
+template(name='call_tone')
+    button.ui.large.button.call
+        i.big.download.icon
+        |call tone
+        |download
+    if page_doc.tone 
+        i.checkmark.icon
