--- a/client/user.jade
+++ b/client/user.jade
@@ -46,10 +46,12 @@ template(name='stackuser_page')
                         i.linkify.icon
                         // |#{link}
                 .nine.wide.column
-                    .ui.big.header(class=post_header_class)
+                    .ui.big.inline.header(class=post_header_class)
                         |!{display_name} 
                         small #{reputation}
-
+                    .ui.inline.header.set_location.pointer.zoomer
+                        i.marker.icon 
+                        |#{location}
                     .ui.grey.inline.header.get_question.agg
                         i.question.icon
                         |#{user_questions.count} questions
