trying to org site stack and reddit trees, site_users click on location send to filter

--- a/client/stack_sites.jade
+++ b/client/stack_sites.jade
@@ -14,8 +14,8 @@ template(name='stack')
                 .ui.five.column.stackable.grid
                     each site_docs
                         a.center.aligned.column.goto_site(href="/site/#{api_site_parameter}")
-                            img.ui.fluid.image.mobile.hiden.site.zoomer(src=high_resolution_icon_url)
-                            img.ui.image.site.zoomer(src=logo_url)
+                            img.ui.fluid.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
+                            img.ui.image.site.shadowed.zoomer(src=logo_url)
                             // .header
                             //     |!{name}
                             // .description 
