--- a/client/user.jade
+++ b/client/user.jade
@@ -20,7 +20,7 @@ template(name='stackuser_page')
         
                     +print_this
                     .ui.list
-                        .item #{boops} boops
+                        // .item #{boops} boops
                         .item account id #{account_id}
                         .item employee #{is_employee}
                         .item last modified {{ufrom last_modified_date}}
