--- a/client/s.css
+++ b/client/s.css
@@ -18,6 +18,10 @@ body {
   width: inherit !important;
 }
 
+.shadowed {
+  filter: drop-shadow(0px 0px 5px grey);    
+
+}
 /*.invert > p {*/
 /*  color:white !important;*/
   /*filter: invert(1) !important; */
