--- a/client/site_questions.jade
+++ b/client/site_questions.jade
@@ -5,8 +5,8 @@ template(name='site_page')
                 .three.wide.right.aligned.column
                     // a.ui.circular.icon.button(href='/')
                     //     i.large.home.icon
-                    img.get_info.mobile.hidden(src=high_resolution_icon_url )
-                    img.get_info(src=logo_url )
+                    img.get_info.mobile.hidden.shadowed(src=high_resolution_icon_url )
+                    img.get_info.shadowed(src=logo_url )
                     // img(src=icon_url)
                     // .ui.segment(style="background-color:#{styling.tag_background_color}")
                     // .ui.label #{tag_background_color}: tag_background_color
@@ -15,6 +15,21 @@ template(name='site_page')
                     // .ui.grey.small.header 
                     //     |related sites
                     // .ui.inline.header !{name}
+                    // +comments
+                    // +voting_full
+                    a.ui.circular.basic.disabled.large.button(href="/site/#{api_site_parameter}/questions")
+                        i.question.icon
+                        |questions
+                    a.ui.circular.basic.large.button(href="/site/#{api_site_parameter}/users")
+                        i.user.icon
+                        |users
+                    a.ui.circular.basic.disabled.large.button(href="/site/#{api_site_parameter}/tags")
+                        i.tags.icon
+                        |tags
+                    a.ui.circular.basic.disabled.large.button(href="/site/#{api_site_parameter}/badges")
+                        i.certificate.icon
+                        |badges
+                    div
                     .ui.animated.selection.list
                         each related_sites
                             a.item(href="/site/#{api_site_parameter}") 
@@ -40,19 +55,7 @@ template(name='site_page')
                                         small #{reputation}
                                     .description
                                         |!{location}
-                    // +comments
-                    // +voting_full
                 .nine.wide.column
-                    a.ui.circular.basic.disabled.button(href="/site/#{api_site_parameter}/questions")
-                        i.question.icon
-                        |questions
-                    a.ui.circular.basic.button(href="/site/#{api_site_parameter}/users")
-                        i.user.icon
-                        |users
-                    a.ui.circular.basic.disabled.button(href="/site/#{api_site_parameter}/tags")
-                        i.tags.icon
-                        |tags
-                    div
                     if selected_tags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
@@ -218,100 +221,3 @@ template(name='stack_tag_selector')
         // small #{count}
 
 
-template(name='site_users')
-    with current_site
-        .ui.stackable.padded.grid
-            .row
-                .four.wide.column
-                    // a.ui.circular.icon.button(href='/')
-                    //     i.large.home.icon
-                    img(src=logo_url )
-                    // img(src=icon_url)
-                    // .ui.segment(style="background-color:#{styling.tag_background_color}")
-                    // .ui.label #{tag_background_color}: tag_background_color
-                    // .ui.label #{tag_foreground_color}: tag_foreground_color
-                    // .ui.label #{link_color}: link_color
-                    // .ui.header related sites
-                    .ui.header !{name}
-                    // each related_sites
-                        // .ui.small.header 
-                        //     i.fork.icon
-                        //     |#{name}
-                        // .ui.list 
-                            // .item relation: #{relation}
-                            // .item api_site_parameter: #{api_site_parameter}
-                            // .item site_url: #{site_url}
-                    a(href="https://www.twitter.com/#{twitter_account}" target='_window' title=twitter_account)
-                        i.large.link.twitter.icon
-                    a.ui.large.basic.icon.button(href=site_url)
-                        // |#{site_url}
-                        i.external.icon
-                    +print_this
-                    a.ui.large.button(href="/site/#{api_site_parameter}")
-                        |questions
-                    a.ui.large.disabled.button(href="/site/#{api_site_parameter}/users")
-                        |users
-                    a.ui.large.disabled.button(href="/site/#{api_site_parameter}/tags")
-                        |tags
-                    .ui.list.mobile.hidden
-                        // .item #{launch_date} launch_date
-                        // .item #{open_beta_date} open_beta_date
-                        // .item #{closed_beta_date} closed_beta_date
-                        // .item #{site_state} site_state
-                        // .item #{high_resolution_icon_url} high_resolution_icon_url
-                        // .item #{favicon_url} favicon_url
-                        .item #{audience}
-                        // .item #{api_site_parameter} api_site_parameter
-                        // .item #{site_type} site_type
-                    +array_edit k='tags' d=true
-                    // +comments
-                    // +voting_full
-                    .ui.icon.button.get_site_users
-                        i.refresh.icon
-                .eight.wide.center.aligned.column
-                    if selected_tags
-                        // if many_tags
-                        //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
-                        //         i.remove.icon
-                        each selected_tags
-                            +unselect_tag
-                    .ui.icon.input
-                        if current_user_query
-                            i.remove.link.icon.clear_user
-                        else
-                            i.user.link.icon
-                        input.search_users(type='text' placeholder='username' val="{{session 'user_query'}}")
-                    .ui.icon.input
-                        if current_location_query
-                            i.remove.link.icon.clear_location
-                        else
-                            i.marker.link.icon.clear_location
-                        input.search_location(type='text' placeholder='location' value=current_location_query)
-                    each site_tags
-                        +stack_tag_selector
-                        // .ui.large.label(title=count) #{name}
-                    if skv_is 'sort_direction' 1
-                        .ui.icon.compact.circular.button.sort_down
-                            i.caret.down.icon
-                    else
-                        .ui.icon.compact.circular.button.sort_up
-                            i.caret.up.icon
-                    .ui.inline.header 
-                        small viewing
-                        |#{stackusers.count} / #{user_count}
-                    .scrolling.ui.items
-                        each stackusers
-                            a.item(href="/site/#{site}/user/#{user_id}" class=post_header_class) 
-                                .ui.tiny.rounded.image
-                                    img(src=profile_image)
-                                .content
-                                    a.ui.inline.header.say_name(href="/site/#{site}/user/#{user_id}" class=post_header_class) 
-                                        |!{display_name}
-                                        small #{reputation}
-                                    span.description
-                                        |!{location}
-                                    each user_tag_agg
-                                        .ui.basic.small.circular.label #{title}
-                .four.wide.center.aligned.column
-                    .ui.header filter
-        
