--- a/client/watson.jade
+++ b/client/watson.jade
@@ -408,3 +408,6 @@ template(name='watson_full')
     //-     if watson 
     //-         +jsonView json=watson
     //- .ui.divider
+
+template(name='flat_tag_selector')
+    .ui.label #{this}
