first barely working suser tg agg in site_users temp

--- a/client/site_questions.jade
+++ b/client/site_questions.jade
@@ -55,7 +55,7 @@ template(name='site_page')
                                         small #{reputation}
                                     .description
                                         |!{location}
-                .nine.wide.column
+                .ui.nine.wide.center.aligned.column
                     if selected_tags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
