--- a/client/stack_users.jade
+++ b/client/stack_users.jade
@@ -63,7 +63,7 @@ template(name='users')
                                 |#{site}
                                 i.grey.marker.icon
                                 |#{location}
-                                each user_tag_agg
+                                each tags
                                     .ui.basic.small.label #{title}
                                 
                                 
