--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,22 +4,22 @@ template(name='nav')
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
-            a.icon.item.home2(href='/')
-                i.big.yin.yang.icon
-            a.icon.item.home2(href='/reddit')
-                i.big.reddit.icon
+            // a.icon.item.home2(href='/')
+            //     i.big.yin.yang.icon
+            // a.icon.item.home2(href='/reddit')
+            //     i.big.reddit.icon
             a.icon.item.home2(href='/stack' data-tab='groups')
                 i.large.stack.exchange.icon
             a.icon.item.users(href='/users')
                 i.large.users.icon
-            a.icon.item.tags(href='/tags')
-                i.large.tags.icon
-            a.icon.item.badges(href='/badges')
-                i.large.certificate.icon
-            a.icon.item(href='/images')
-                i.large.image.icon
-            a.icon.item(href='/videos')
-                i.large.youtube.icon
+            // a.icon.item.tags(href='/tags')
+            //     i.large.tags.icon
+            // a.icon.item.badges(href='/badges')
+            //     i.large.certificate.icon
+            // a.icon.item(href='/images')
+            //     i.large.image.icon
+            // a.icon.item(href='/videos')
+            //     i.large.youtube.icon
             // a.icon.item(href='/events')
             //     i.big.calendar.icon
             // .ui.search.item
@@ -27,8 +27,8 @@ template(name='nav')
             //         input(type='text')
             // a.icon.disabled.item(href='/reddit')
             //     i.big.reddit.icon
-            a.icon.disabled.item(href='/wikipedia')
-                i.big.wikipedia.icon
+            // a.icon.disabled.item(href='/wikipedia')
+            //     i.big.wikipedia.icon
         unless connected
             .item
                 i.yin.yang.loading.big.icon
