--- a/client/site_questions.jade
+++ b/client/site_questions.jade
@@ -78,8 +78,8 @@ template(name='site_page')
                         .item #{total_accepted} accepted
                         .item #{total_unanswered} unanswered
                         // .item api_revision: #{api_revision}
-                    if in_dev
-                        +array_edit k='tags' d=true
+                    // if in_dev
+                    //     +array_edit k='tags' d=true
                     
                 .ui.twelve.wide.column
                     if selected_tags
