--- a/client/stack_sites.jade
+++ b/client/stack_sites.jade
@@ -14,7 +14,7 @@ template(name='stack')
                 .ui.five.column.stackable.grid
                     each site_docs
                         a.center.aligned.column.goto_site(href="/site/#{api_site_parameter}")
-                            img.ui.fluid.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
+                            // img.ui.fluid.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
                             img.ui.image.site.shadowed.zoomer(src=logo_url)
                             // .header
                             //     |!{name}
