tigher design, swapped columns, two back t site buttons,

--- a/client/question.jade
+++ b/client/question.jade
@@ -2,7 +2,7 @@ template(name='stack_page')
     with current_doc
         .ui.stackable.padded.grid
             .row
-                .four.wide.right.aligned.column.scrolling
+                .four.wide.column.scrolling
                     a.ui.fluid.basic.circular.button.say_site(href="/site/#{site}") 
                         i.chevron.left.icon
                         if watson.metadata.image
