--- a/client/reddit.jade
+++ b/client/reddit.jade
@@ -26,7 +26,7 @@ template(name='reddit')
                 //     i.smile.large.grey.icon
                 //     |emotion
                 // .spacer
-            .four.wide.right.aligned.column.scrolling
+            .four.wide.column.scrolling
                 // .ui.large.basic.label(title='results') #{doc_count} results
                 // .ui.basic.circular.button(title='when')
                 // i.clock.icon
